# haskell-checkprime

./: .gitignore  Prime.hs  README.md  args.hs  checkprime.cabal  checkprime.hs
src/: Args.hs  Main.hs  Prime.hs
