name:                checkprime
version:             1.0.0.0
description:         A simple CLI utility to check whether a number is prime
homepage:            https://github.com/bactroid/haskell-checkprime#readme
license:             GPL-3
license-file:        LICENSE
author:              Kate Haskell
maintainer:          fuzzcat@bactroid.net
copyright:           2018 Kate Haskell
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable checkprime
  hs-source-dirs:      src
  ghc-options:         -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Args
                     , Prime
  build-depends:       base >= 4.7 && < 5
